--- a/ListaTarefas/style.css
+++ b/ListaTarefas/style.css
@@ -50,10 +50,14 @@ body {
     color: #f3f3f3;
 }
 
-.title {   
+.title, #name {
+    font-size: calc(4vw + 2rem);
+}
+
+.title {
+    width: max-content;
     margin-left: 5vw;
     text-align: left;
-    font-size: calc(4vw + 1.3rem);
     font-weight: 900;
     color: rgba(228, 228, 288, 0.7);
     letter-spacing: 2px;
@@ -62,7 +66,6 @@ body {
 
 #name {
     text-align: left;
-    width: 45vw;
     margin: 2rem 0;
     padding: 0 1rem;
     background: transparent;
