--- a/ListaTarefas/style.css
+++ b/ListaTarefas/style.css
@@ -50,6 +50,10 @@ body {
     color: #f3f3f3;
 }
 
+.header { 
+    display: flex;
+}
+
 .title, #name {
     font-size: calc(4vw + 2rem);
 }
@@ -65,6 +69,7 @@ body {
 }
 
 #name {
+    width: 80%;
     text-align: left;
     margin: 2rem 0;
     padding: 0 1rem;
